# squeezesay

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  PRIVACY.md  README.md  SUPPORT.md  docker-compose.yml  pyproject.toml  repository.yaml
deploy/: squeezesay.service  vivavoce.service
deploy/docker/: entrypoint.sh
docs/: lemonsqueezy-setup.md
docs/launch/: lyrion-forum-post.md  reddit-r-squeezebox.md
engine/: actions.py  blocklist_store.py  discovery.py  lms.py  messages.py
ha-addon/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
interaction-models/: en-US.json  it-IT.json
lambda/: actions.py  blocklist_store.py  config.example.env  config.example.py  lambda_function.py  lms.py  messages.py
licenses/: PRO-EULA.md  README.md
localvoice/: appdata.py  index.html  licensing.py  manifest.webmanifest  router.py  server.py  sw.js
localvoice/pro/: __init__.py  asr.py  kidsafe.py  multiroom.py
tests/: conftest.py  test_actions.py  test_appdata.py  test_blocklist_store.py  test_discovery.py  test_english.py  test_handlers_integration.py  test_kidsafe_web.py  test_licensing.py  test_lms.py  test_matching.py  test_multiroom_sleep.py  test_nowplaying.py  test_qobuz.py  test_router.py  test_server.py  test_transcribe.py
tools/: build_lambda.py  install_autostart.ps1  make_cert.py  make_icons.py  probe_lms.py  run_local.ps1  ui_asr_test.py  ui_shots.py  uninstall_autostart.ps1
