[project]
name = "squeezesay"
version = "0.1.0"
description = "Hands-free voice control for a Daphile/LMS hi-fi (and TIDAL), in Italian."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ask-sdk-core>=1.19.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "cryptography>=42.0",  # solo per generare il certificato TLS locale (tools/make_cert.py)
]

# Questo repo è una raccolta di moduli (lambda/ + tests/), non un pacchetto
# installabile: diciamo a uv di non provare a "buildarlo".
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambda", "localvoice"]
addopts = "-q"
# Silenzia i SyntaxWarning che arrivano dalle docstring di ask-sdk-model su
# Python 3.13+ (libreria di terze parti, non dal nostro codice).
filterwarnings = [
    "ignore::SyntaxWarning",
]
