[project]
name = "vivavoce"
version = "0.2.0"
description = "Vivavoce — hands-free voice control for a Daphile/LMS hi-fi (TIDAL and Qobuz included), in Italian and English."
readme = "README.md"
# Open-core: tutto AGPL-3.0 tranne localvoice/pro/ (vedi licenses/README.md).
license = "AGPL-3.0-only"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "cryptography>=42.0",  # solo per generare il certificato TLS locale (tools/make_cert.py)
    "playwright>=1.40",  # screenshot della UI web (tools/ui_shots.py)
]
# Riconoscimento vocale locale (/transcribe, Pro): opzionale, il core resta
# stdlib-only. Installa con: uv sync --group asr
asr = [
    "faster-whisper>=1.0",
]

# Questo repo è una raccolta di moduli (engine/ + tests/), non un pacchetto
# installabile: diciamo a uv di non provare a "buildarlo".
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["engine", "localvoice"]
addopts = "-q"
